set (EXEC test_unit_containers)
set (LIBS_DEPEND Test_Base Test_Support_Containers)
add_executable(${EXEC} ${EXEC}.c)
target_link_libraries(${EXEC} ${LIBS_DEPEND})
add_test_DPG(${EXEC} "matrix_mm")
add_test_DPG(${EXEC} "matrix_mv")
add_test_DPG(${EXEC} "matrix_mm_diag")

set (EXEC test_unit_bases)
set (LIBS_DEPEND Test_Base Test_Support_Containers Test_Support_Element)
add_executable(${EXEC} ${EXEC}.c)
target_link_libraries(${EXEC} ${LIBS_DEPEND})
add_test_DPG(${EXEC} "tp_orthonormal")
add_test_DPG(${EXEC} "si_orthonormal")
add_test_DPG(${EXEC} "pyr_orthonormal")
add_test_DPG(${EXEC} "tp_bezier")
add_test_DPG(${EXEC} "si_bezier")
add_test_DPG(${EXEC} "pyr_bezier")

set (EXEC test_unit_nodes)
set (LIBS_DEPEND Test_Base Test_Support_Containers Test_Support_Element)
add_executable(${EXEC} ${EXEC}.c)
target_link_libraries(${EXEC} ${LIBS_DEPEND})
add_test_DPG(${EXEC} "tp")
add_test_DPG(${EXEC} "si")
add_test_DPG(${EXEC} "pyr")
add_test_DPG(${EXEC} "plotting")
add_test_DPG(${EXEC} "face_correspondence")

set (EXEC test_unit_operators_tp)
set (LIBS_DEPEND Element Test_Base Test_Support_Containers)
add_executable(${EXEC} ${EXEC}.c)
target_link_libraries(${EXEC} ${LIBS_DEPEND})
add_test_DPG(${EXEC} "constructor_quad")
add_test_DPG(${EXEC} "constructor_hex")
add_test_DPG(${EXEC} "constructor_wedge")
add_test_DPG(${EXEC} "apply_quad")
add_test_DPG(${EXEC} "apply_hex")
add_test_DPG(${EXEC} "apply_wedge")

set (EXEC test_unit_approximate_nearest_neighbor)
set (LIBS_DEPEND Test_Base Test_Support_Containers Simulation)
add_executable(${EXEC} ${EXEC}.c)
target_link_libraries(${EXEC} ${LIBS_DEPEND})
add_test_DPG_w_path(${BIN_PATH_2D} ${EXEC} "uniform_2d")
add_test_DPG_w_path(${BIN_PATH_2D} ${EXEC} "uniform_random_2d")
add_test_DPG_w_path(${BIN_PATH_3D} ${EXEC} "uniform_random_3d")
